// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`st.toHex snapshots 1`] = `
ArrayBuffer [
  255,
  171,
  1,
]
`;

exports[`st.toHex snapshots 2`] = `
ArrayBuffer [
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`st.toBase64 snapshots 1`] = `
ArrayBuffer [
  175,
  31,
  74,
]
`;

exports[`st.toBase64 snapshots 2`] = `
ArrayBuffer [
  125,
  31,
  74,
  34,
  63,
  21,
]
`;

exports[`st.toBytes snapshots 1`] = `
ArrayBuffer [
  73,
  12,
  3,
]
`;

exports[`st.toBytes snapshots 2`] = `
ArrayBuffer [
  34,
  10,
  0,
  74,
  31,
  23,
]
`;

exports[`st.toAscii snapshots 1`] = `
ArrayBuffer [
  54,
  51,
  52,
  102,
]
`;

exports[`st.toAscii snapshots 2`] = `
ArrayBuffer [
  104,
  100,
  106,
  100,
  112,
  95,
]
`;
